<resources>
    <string name="app_name">QuickDisp</string>
    <string name="app_icon">App Icon</string>
    <string name="username">My</string>
    <string name="device_name">Device</string>
    <string name="show_username">Show Username</string>
    <string name="show_device_name">Show Device Name</string>
    <string name="switch_off">N</string>
    <string name="switch_on">Y</string>
    <string name="change">Change</string>
    <string name="start_color">Title Start Gradient</string>
    <string name="end_color">Title End Gradient</string>
    <string name="white_color_hex">#FFFFFF</string>
    <string name="show_sample_color">Show sample color</string>
    <string name="preferences">Preferences</string>
    <string name="red_component">Red Component</string>
    <string name="green_component">Green Component</string>
    <string name="blue_component">Bue Component</string>
    <string name="rgb_value">RGB Value</string>
    <string name="rrr">RR</string>
    <string name="ggg">GG</string>
    <string name="bbb">BB</string>
    <string name="auto_close_dialog">Auto Close Dialog</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="reset_menu_option">Reset Settings</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="user_s">User\'s</string>
    <string name="device">Device</string>
    <string name="show_username_from_contacts">Show Username From Contacts</string>
    <string name="show_name_from_device_info">Show Name From Device Info</string>
    <string name="close_dialog_on_any_option">Close Dialog On Selecting Any Option</string>
    <string name="fifteen_seconds">Fifteen Seconds</string>
    <string name="thirty_seconds">Thirty Seconds</string>
    <string name="one_minute">One Minute</string>
    <string name="two_minutes">Two Minutes</string>
    <string name="five_minutes">Five Minutes</string>
    <string name="ten_minutes">Ten Minutes</string>
    <string name="thirty_minutes">Thirty Minutes</string>
    <string name="icon_for_current_settings">Icon for current settings</string>
    <string name="auto_brightness">Auto Brightness </string>
    <string name="dialog_bgColor_picker">Dialog Background Color</string>
</resources>
