<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:theme="@style/CardView.Light">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_finalColor"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="25dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:contentPadding="8dp">

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView_finalColor"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_redComponent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#ff0000"
            android:contentDescription="@string/red_component" />

        <SeekBar
            android:id="@+id/seekBar_redComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:padding="5dp"
            android:progress="0" />

        <TextView
            android:id="@+id/textView_redComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/rrr" />

        <ImageView
            android:id="@+id/imageView_greenComponent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#00ff00"
            android:contentDescription="@string/green_component" />

        <SeekBar
            android:id="@+id/seekBar_greenComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:max="255"
            android:padding="5dp"
            android:progress="0" />

        <TextView
            android:id="@+id/textView_greenComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/ggg" />

        <ImageView
            android:id="@+id/imageView_blueComponent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#0000ff"
            android:contentDescription="@string/blue_component" />

        <SeekBar
            android:id="@+id/seekBar_blueComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:max="255"
            android:padding="5dp"
            android:progress="0" />

        <TextView
            android:id="@+id/textView_blueComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/bbb" />

        <TextView
            android:id="@+id/textView_hexCode"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/rgb_value"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_color"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_colorPickerCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_colorPickerOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>