<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgView_appIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:contentDescription="@string/app_icon"
                android:cropToPadding="false"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/textView_deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/device_name" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_layout_switches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#a8ff00ea"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="#cc00ffff"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Switch
                                android:id="@+id/switch2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="@string/show_username" />

                            <Switch
                                android:id="@+id/switch3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="@string/show_device_name" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_layout_startColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#a8ff00ea"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView_startColor"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alex_brush"
                        android:gravity="center_horizontal"
                        android:text="@string/start_color"
                        android:textSize="18sp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="#cc00ffff"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView_startColor"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:contentDescription="@string/show_sample_color"
                                android:elevation="20dp"
                                android:fadingEdge="horizontal|vertical"
                                android:src="#ffffff" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView_startColorHex"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/white_color_hex" />

                                <Button
                                    android:id="@+id/button_changeStartColor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/change" />
                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_layout_endColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#a8ff00ea"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView_endColor"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alex_brush"
                        android:gravity="center_horizontal"
                        android:text="@string/end_color"
                        android:textSize="18sp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="#cc00ffff"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView_endColor"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:contentDescription="@string/show_sample_color"
                                android:elevation="20dp"
                                android:fadingEdge="horizontal|vertical"
                                android:src="#ffffff" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView_endColorHex"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/white_color_hex" />

                                <Button
                                    android:id="@+id/button_changeEndColor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/change" />
                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
